tests/ui/moves/issue-99470-move-out-of-some.stderr
error[E0507]: cannot move out of `x` as enum variant `Some` which is behind a shared reference
  --> $DIR/issue-99470-move-out-of-some.rs:4:11
   |
LL |     match x {
   |           ^
LL |
LL |         &Some(_y) => (),
   |               --
   |               |
   |               data moved here
   |               move occurs because `_y` has type `Box<i32>`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -         &Some(_y) => (),
LL +         Some(_y) => (),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
